# wit

./: .gitignore  CMakeLists.txt  Makefile  README.md  mk  mkalld  mkallr
interesting/3-2-2-2/: W3222.m  filtered.ieq  lrsEV.vf  lrsP.vf  original.ieq  panda.ieq  pandaEV.poi  pandaP.poi  portaEV.poi  portaP.poi  selected.ieq  v_W3222.mat  vs_W3222.mat
interesting/3-2-2-3/: W3223.m  filtered.ieq  lrsP.vf  original.ieq  panda.ieq  pandaP.poi  portaP.poi  selected.ieq  v_W3223.mat  vs_W3223.mat
interesting/4-2-2-2/: W4222.m  filtered.ieq  lrsEV.vf  lrsP.vf  original.ieq  panda.ieq  pandaEV.poi  pandaP.poi  portaEV.poi  portaP.poi  selected.ieq  v_W4222.mat  vs_W4222.mat
matlab/: NPADimNeumark.m  UC.m  mSeeSaw.m  mkProjectorSet.m  mkRandomPreparations.m  mkRandomProjectors.m  mkpath.m  pathdef.m  prepareNPADimNeumark.m  randomNeumarkAlternative.m  randomNeumarkFromProj.m  runNPADimNeumark.m  runSeeSaw.m  runWitFile.m  saveStatesAndMeasurements.m  wMat.m  witEvaluate.m
src/: CMakeLists.txt  Counted.h  Cut.cpp  DIGenerator.cpp  DIGenerator.h  EHash.h  Encode.h  EncoderGenerator.cpp  EncoderGenerator.h  EndGenerator.cpp  EndGenerator.h  Essential.h  Evaluator.h  Exception.h  Expression.cpp  Expression.h  ExpressionList.cpp  ExpressionList.h  Filter.cpp  FilterLRS.cpp  FilterPorta.cpp  ImplList.h  Ineq.h  IneqList.h  IntList.cpp  IntList.h  List.cpp  Lists.h  LogStream.cpp  LogStream.h  MainSearch.cpp  Makefile  Matlab.cpp  MeasurementGenerator.cpp  MeasurementGenerator.h  OrderEvaluator.cpp  OrderEvaluator.h  ParamPOVM.cpp  ParamPOVM.h  Poly.cpp  (+29 more)
